noinst_LIBRARIES = libmilkyplay.a
libmilkyplay_a_SOURCES = AudioDriverBase.cpp AudioDriverManager.cpp AudioDriver_NULL.cpp AudioDriver_WAVWriter.cpp ExporterXM.cpp LittleEndian.cpp Loader669.cpp LoaderAMF.cpp LoaderAMS.cpp LoaderCBA.cpp LoaderDBM.cpp LoaderDIGI.cpp LoaderDSM.cpp LoaderDTM.cpp LoaderFAR.cpp LoaderGDM.cpp LoaderIMF.cpp LoaderIT.cpp LoaderMDL.cpp LoaderMOD.cpp LoaderMTM.cpp LoaderMXM.cpp LoaderOKT.cpp LoaderPLM.cpp LoaderPSM.cpp LoaderPTM.cpp LoaderS3M.cpp LoaderSTM.cpp LoaderULT.cpp LoaderUNI.cpp LoaderXM.cpp PlayerBase.cpp PlayerGeneric.cpp PlayerSTD.cpp ResamplerFactory.cpp SampleLoaderAIFF.cpp SampleLoaderALL.cpp SampleLoaderAbstract.cpp SampleLoaderGeneric.cpp SampleLoaderIFF.cpp SampleLoaderWAV.cpp XIInstrument.cpp XMFile.cpp XModule.cpp drivers/sdl/AudioDriver_SDL.cpp drivers/jack/AudioDriver_JACK.cpp ChannelMixer.cpp MasterMixer.cpp drivers/alsa/AudioDriver_ALSA.cpp
noinst_HEADERS = AudioDriverManager.h AudioDriver_COMPENSATE.h AudioDriver_NULL.h AudioDriver_WAVWriter.h LittleEndian.h Loaders.h MilkyPlay.h MilkyPlayCommon.h PlayerBase.h PlayerGeneric.h PlayerSTD.h ResamplerFactory.h ResamplerFast.h ResamplerMacros.h SampleLoaderAIFF.h SampleLoaderALL.h SampleLoaderAbstract.h SampleLoaderGeneric.h SampleLoaderIFF.h SampleLoaderWAV.h XIInstrument.h XMFile.h XModule.h drivers/alsa/AudioDriver_ALSA.h drivers/sdl/AudioDriver_SDL.h drivers/jack/AudioDriver_JACK.h ChannelMixer.h MasterMixer.h Mixable.h AudioDriverBase.h ResamplerCubic.h ResamplerSinc.h
INCLUDES = -I$(top_srcdir)/src/milkyplay -Idrivers/generic -Idrivers/jack \
	-Idrivers/sdl
AM_CPPFLAGS=-DMILKYTRACKER -D__THREADTIMER__ -DDRIVER_UNIX ${SDL_CFLAGS}
