SUBDIRS = osinterface
noinst_LIBRARIES = libppui.a
libppui_a_SOURCES = Button.cpp CheckBox.cpp Container.cpp ContextMenu.cpp Control.cpp Dictionary.cpp DictionaryKey.cpp Event.cpp Font.cpp Graphics_15BIT.cpp Graphics_16BIT.cpp Graphics_ARGB32.cpp Graphics_BGR24.cpp Graphics_BGR24_SLOW.cpp KeyboardBindingHandler.cpp ListBox.cpp ListBoxFileBrowser.cpp Menu.cpp MessageBoxContainer.cpp PPUIConfig.cpp RadioGroup.cpp DialogBase.cpp DialogFileSelector.cpp Screen.cpp Scrollbar.cpp Seperator.cpp Slider.cpp StaticText.cpp Tools.cpp TransparentContainer.cpp sdl/DisplayDevice_SDL.cpp sdl/DisplayDeviceOGL_SDL.cpp sdl/DisplayDeviceFB_SDL.cpp Graphics_24bpp_generic.cpp Graphics_32bpp_generic.cpp Graphics_OGL.cpp
noinst_HEADERS = BasicTypes.h Button.h CheckBox.h Container.h ContextMenu.h Control.h Dictionary.h DictionaryKey.h DisplayDeviceBase.h Event.h fastfill.h Font.h Graphics.h GraphicsAbstract.h KeyBindings.h KeyboardBindingHandler.h ListBox.h ListBoxFileBrowser.h Menu.h MessageBoxContainer.h Object.h PPPath.h PPUI.h PPUIConfig.h RadioGroup.h DialogBase.h DialogFileSelector.h ScanCodes.h Screen.h ScrollBar.h Seperator.h SimpleVector.h Singleton.h Slider.h StaticText.h Tools.h TransparentContainer.h UndoStack.h sdl/DisplayDevice_SDL.h sdl/DisplayDeviceOGL_SDL.h sdl/DisplayDeviceFB_SDL.h VirtualKeys.h Graphics_OGL.h
INCLUDES = -I$(top_srcdir)/src/ppui/osinterface -I$(top_srcdir)/src/ppui/sdl -I$(top_srcdir)/src/ppui/osinterface/posix
AM_CPPFLAGS = -DMILKYTRACKER -D__THREADTIMER__ -D__LINUX__ ${SDL_CFLAGS}
EXTRA_DIST = carbon/DisplayDevice_CARBON.cpp carbon/DisplayDevice_CARBON.h win32/DisplayDevice_WIN32.cpp win32/DisplayDevice_WIN32.h wince/DisplayDevice_GAPI.cpp wince/DisplayDevice_GAPI.h